--- a/src/components/LoginForm/styles.module.css
+++ b/src/components/LoginForm/styles.module.css
@@ -15,6 +15,9 @@
     border: 2px solid #6f6e6ea7;
     padding-left: 3px;
     font-size: var(--input-font-size);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .submit:hover {
