--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,3 +40,11 @@ h2 {
 input[type=submit]:hover {
   cursor: pointer;
 }
+
+.global-loading-component {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 90vh;
+}
