--- a/src/containers/HomePage/styles.module.css
+++ b/src/containers/HomePage/styles.module.css
@@ -4,6 +4,12 @@
     background-color: #ccc;
     border: 1px solid #000;
     border-radius: 5px;
-    margin: 30px auto;
+    margin: 0px 10px;
     padding: 10px;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
