--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -48,3 +48,19 @@ input[type=submit]:hover {
   width: 100%;
   height: 90vh;
 }
+
+.open {
+  position: absolute;
+  background-color: #000000;
+  top: 0;
+  right: 0;
+  /* width: 100vw; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 0px 0px 0px 20px;
+  padding: 10px 10px 10px 30px;
+
+}
+
