--- a/src/containers/HomePage/styles.module.css
+++ b/src/containers/HomePage/styles.module.css
@@ -1,10 +1,10 @@
 .info {
     font-size: var(--normal-font-size);
     max-width: 380px;
+    width: 90%;
     background-color: #ccc;
     border: 1px solid #000;
     border-radius: 5px;
-    margin: 0px 10px;
     padding: 10px;
 }
 
